<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/setting_hard"
                    android:title="@string/hard"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/setting_medium"
                    android:title="@string/medium"
                    />
                <item
                    android:id="@+id/setting_easy"
                    android:title="@string/easy"
                    />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_statistics"
        android:title="@string/statistics"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        android:orderInCategory="2"
        app:showAsAction="never" />

</menu>